WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244568
[GCC] Cannot convert GCGLint64 to WebGLAny
https://bugs.webkit.org/show_bug.cgi?id=244568
Summary
[GCC] Cannot convert GCGLint64 to WebGLAny
Diego Pino
Reported
2022-08-30 20:42:46 PDT
After
https://commits.webkit.org/253898@main
, the WPE-Linux-64bit-Release-Packaging-Nightly-Ubuntu2004 build bot is failing with the following error: ``` In file included from WebCore/DerivedSources/unified-sources/UnifiedSource-950a39b6-26.cpp:7: ../../Source/WebCore/html/canvas/WebGL2RenderingContext.cpp: In member function ‘WebCore::WebGLAny WebCore::WebGL2RenderingContext::getIndexedParameter(GCGLenum, GCGLuint)’: ../../Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:2414:40: error: could not convert ‘((WebCore::WebGL2RenderingContext*)this)->WebCore::WebGL2RenderingContext::<anonymous>.WebCore::WebGLRenderingContextBase::m_context.WTF::RefPtr<WebCore::GraphicsContextGL>::operator->()->WebCore::GraphicsContextGL::getInteger64i(target, index)’ from ‘GCGLint64’ {aka ‘long int’} to ‘WebCore::WebGLAny’ {aka ‘std::variant<std::nullptr_t, bool, int, unsigned int, long long int, float, WTF::String, WTF::Vector<bool, 0, WTF::CrashOnOverflow, 16, WTF::FastMalloc>, WTF::Vector<int, 0, WTF::CrashOnOverflow, 16, WTF::FastMalloc>, WTF::Vector<unsigned int, 0, WTF::CrashOnOverflow, 16, WTF::FastMalloc>, WTF::RefPtr<JSC::GenericTypedArrayView<JSC::Float32Adaptor>, WTF::RawPtrTraits<JSC::GenericTypedArrayView<JSC::Float32Adaptor> >, WTF::DefaultRefDerefTraits<JSC::GenericTypedArrayView<JSC::Float32Adaptor> > >, WTF::RefPtr<JSC::GenericTypedArrayView<JSC::Int32Adaptor>, WTF::RawPtrTraits<JSC::GenericTypedArrayView<JSC::Int32Adaptor> >, WTF::DefaultRefDerefTraits<JSC::GenericTypedArrayView<JSC::Int32Adaptor> > >, WTF::RefPtr<JSC::GenericTypedArrayView<JSC::Uint32Adaptor>, WTF::RawPtrTraits<JSC::GenericTypedArrayView<JSC::Uint32Adaptor> >, WTF::DefaultRefDerefTraits<JSC::GenericTypedArrayView<JSC::Uint32Adaptor> > >, WTF::RefPtr<JSC::GenericTypedArrayView<JSC::Uint8Adaptor>, WTF::RawPtrTraits<JSC::GenericTypedArrayView<JSC::Uint8Adaptor> >, WTF::DefaultRefDerefTraits<JSC::GenericTypedArrayView<JSC::Uint8Adaptor> > >, WTF::RefPtr<WebCore::WebGLBuffer, WTF::RawPtrTraits<WebCore::WebGLBuffer>, WTF::DefaultRefDerefTraits<WebCore::WebGLBuffer> >, WTF::RefPtr<WebCore::WebGLFramebuffer, WTF::RawPtrTraits<WebCore::WebGLFramebuffer>, WTF::DefaultRefDerefTraits<WebCore::WebGLFramebuffer> >, WTF::RefPtr<WebCore::WebGLProgram, WTF::RawPtrTraits<WebCore::WebGLProgram>, WTF::DefaultRefDerefTraits<WebCore::WebGLProgram> >, WTF::RefPtr<WebCore::WebGLRenderbuffer, WTF::RawPtrTraits<WebCore::WebGLRenderbuffer>, WTF::DefaultRefDerefTraits<WebCore::WebGLRenderbuffer> >, WTF::RefPtr<WebCore::WebGLTexture, WTF::RawPtrTraits<WebCore::WebGLTexture>, WTF::DefaultRefDerefTraits<WebCore::WebGLTexture> >, WTF::RefPtr<WebCore::WebGLVertexArrayObjectOES, WTF::RawPtrTraits<WebCore::WebGLVertexArrayObjectOES>, WTF::DefaultRefDerefTraits<WebCore::WebGLVertexArrayObjectOES> >, WTF::RefPtr<WebCore::WebGLSampler, WTF::RawPtrTraits<WebCore::WebGLSampler>, WTF::DefaultRefDerefTraits<WebCore::WebGLSampler> >, WTF::RefPtr<WebCore::WebGLTransformFeedback, WTF::RawPtrTraits<WebCore::WebGLTransformFeedback>, WTF::DefaultRefDerefTraits<WebCore::WebGLTransformFeedback> >, WTF::RefPtr<WebCore::WebGLVertexArrayObject, WTF::RawPtrTraits<WebCore::WebGLVertexArrayObject>, WTF::DefaultRefDerefTraits<WebCore::WebGLVertexArrayObject> > >’} 2414 | return m_context->getInteger64i(target, index); | ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~ | | | GCGLint64 {aka long int} ```
https://build.webkit.org/#/builders/2/builds/584/steps/10/logs/stdio
This error is not happening in the WPE-Linux-64-bit-Release-Ubuntu-2004-Build build bot because it builds with `--no-experimental-flags` (that means USE_ANGLE_WEBGL is disabled in that bot). The error doesn't happen in the standard WPE-Linux-64-bit-Release-Build which builds with experimental flags but with a more modern version of GCC. Thus, I believe the build error is due to the GCC version (v9.4.0) used in WPE-Linux-64bit-Release-Packaging-Nightly-Ubuntu2004.
Attachments
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2022-08-30 20:46:46 PDT
Pull request:
https://github.com/webkit/webkit/pull/3836
EWS
Comment 2
2022-08-31 07:38:39 PDT
Committed
253984@main
(5c5233b36d49): <
https://commits.webkit.org/253984@main
> Reviewed commits have been landed. Closing PR #3836 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-08-31 07:39:17 PDT
<
rdar://problem/99382564
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug