[GCC] Cannot convert GCGLint64 to WebGLAny https://bugs.webkit.org/show_bug.cgi?id=244568

Reviewed by Žan Doberšek.

* Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::getIndexedParameter): Cast result of type
'long' to 'long long' as type is supported by WebGLAny.

Canonical link: https://commits.webkit.org/253984@main